--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -3,42 +3,43 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" allowedVersions="(,4)" />
-  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.49" targetFramework="net48" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
-  <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" />
-  <package id="CsvHelper" version="25.0.0" targetFramework="net48" />
+  <package id="CouchbaseNetClient" version="3.1.3" targetFramework="net48" />
+  <package id="CsvHelper" version="26.1.0" targetFramework="net48" />
   <package id="Devmasters.Batch" version="2.1.3" targetFramework="net48" />
-  <package id="Devmasters.Cache" version="2.1.3" targetFramework="net48" />
-  <package id="Devmasters.Cache.Couchbase" version="2.0.3" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.1.9" targetFramework="net48" />
-  <package id="Devmasters.Crypto" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.1.8" targetFramework="net48" />
-  <package id="Devmasters.Enums" version="2.1.5" targetFramework="net48" />
-  <package id="Devmasters.Imaging" version="2.1.1" targetFramework="net48" />
+  <package id="Devmasters.Cache" version="2.1.4" targetFramework="net48" />
+  <package id="Devmasters.Cache.Couchbase" version="2.0.5" targetFramework="net48" />
+  <package id="Devmasters.Collections" version="2.1.3" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.1.10" targetFramework="net48" />
+  <package id="Devmasters.Crypto" version="2.1.2" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.1.9" targetFramework="net48" />
+  <package id="Devmasters.Enums" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.Imaging" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.IO" version="2.1.3" targetFramework="net48" />
-  <package id="Devmasters.Lang" version="2.2.1" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.Lang" version="2.2.3" targetFramework="net48" />
+  <package id="Devmasters.Logging" version="2.1.3" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.1.7" targetFramework="net48" />
+  <package id="DnsClient" version="1.4.0" targetFramework="net48" />
   <package id="EasyNetQ" version="6.3.1" targetFramework="net48" />
-  <package id="Elasticsearch.Net" version="7.11.1" targetFramework="net48" />
+  <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="EPPlus" version="5.5.5" targetFramework="net48" />
+  <package id="EPPlus" version="5.6.1" targetFramework="net48" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.30" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.250" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.298" targetFramework="net48" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
-  <package id="Microsoft.ApplicationInsights" version="2.14.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.16.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.14.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.14.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.14.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.16.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.16.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.16.0" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.14.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.14.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.14.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.16.0" targetFramework="net48" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.16.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
@@ -58,7 +59,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.3" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.4" targetFramework="net48" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
@@ -66,8 +67,10 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.ObjectPool" version="5.0.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
@@ -83,8 +86,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.29.1" targetFramework="net48" />
-  <package id="NEST" version="7.11.1" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NEST" version="7.12.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net48" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net472" />
@@ -105,7 +108,7 @@
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
-  <package id="System.Drawing.Common" version="5.0.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
@@ -113,6 +116,7 @@
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq.Async" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
@@ -141,11 +145,12 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Channels" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Dataflow" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
